fixes spacing in navigation bar

--- a/main.css
+++ b/main.css
@@ -11,9 +11,10 @@ body{
     float:left;
     color:darkgrey;
     text-align: center;
+    margin-left:25px;
     padding:15px, 15px;
     text-decoration:none;
-    font-size:20px;
+    font-size:30px;
 }
 .nav a:hover{
     background-color:rgb(255, 81, 0);
